# cppInstrumentation

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: Instrumentor.h  Instrumentor.hpp  avg.hpp  cachemisscounter.hpp  counter.hpp  eventcounter.hpp  functiontimer.hpp  instrumentation.hpp  objectregistry.hpp  scope.hpp  timer.h  timer.hpp
src/: FunctionTimer.cpp  Instrumentor.cpp  cachemisscounter.cpp  timer.cpp
test/: instrumentation_test.cpp
